<?xml version="1.0" encoding="UTF-8"?>
<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xmlns="http://maven.apache.org/POM/4.0.0"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <groupId>com.osallek</groupId>
  <artifactId>eu4-parser</artifactId>
  <version>1.0.0</version>

  <name>Eu4 Parser</name>

  <properties>
    <java.version>1.8</java.version>
    <maven.compiler.target>${java.version}</maven.compiler.target>
    <maven.compiler.source>${java.version}</maven.compiler.source>
    <maven.compiler.release>${java.version}</maven.compiler.release>
    <maven-compiler-plugin.version>3.8.1</maven-compiler-plugin.version>
    <clausewitz-parser.version>1.0.0</clausewitz-parser.version>
  </properties>

  <dependencies>
    <dependency>
      <groupId>com.osallek</groupId>
      <artifactId>clausewitz-parser</artifactId>
      <version>${clausewitz-parser.version}</version>
    </dependency>
  </dependencies>
</project>
